--- a/views/food/show.ejs
+++ b/views/food/show.ejs
@@ -12,7 +12,7 @@
         <h1><%= food.name %></h1>
         <div class="double-trouble">
           <div class="a-tags">
-            <a href="/foods/<%=user.id%>/<%=food.id%>/<%=index%>/edit">Edit Dish</a>
+            <a href="/foods/<%=user.id%>/<%=food.id%>/<%=index%>/edit">Edit</a>
           </div>
           <form class="show-delete" action="/foods/<%=user.id%>/<%=food.id%>/<%=index%>?_method=DELETE" method="post">
             <input type="submit" value="Delete">
