more general styling updates

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -41,9 +41,10 @@
         <li class=dropdown><ion-icon id="menu" name="menu-outline"></ion-icon>
           <ul class=dropdown-content>
             <li><a href="/foods/about/caju/app">About Caju</a></li>
+            <li><a href="/foods">See Your Dishes</a></li>
             <li><a href="/foods/new">Add New Dish</a></li>
-            <li><a href="/mealplans/new">Create a Meal Plan</a></li>
             <li><a href="/mealplans/">See Your Meal Plans</a></li>
+            <li><a href="/mealplans/new">Create a Meal Plan</a></li>
           </ul>
         </li>
       <%}
