--- a/public/styles.css
+++ b/public/styles.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter');
+/* @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter'); */
+@import url('https://fonts.googleapis.com/css2?family=Bentham&display=swap');
 
 
 :root {
@@ -10,10 +11,10 @@
 
 * {
   /* border: 1px solid gold; */
+  font-family: 'Bentham', serif;
 }
 
 body {
-  font-family: 'Architects Daughter', cursive;
   margin: 0;
   padding: 0;
   background-color: #161616;
@@ -81,9 +82,6 @@ h2 {
 .about-container h1 {
   color: var(--yellow);
 }
-
-
-
 
 
 /* ======= */
@@ -201,6 +199,7 @@ nav a:hover {
 
 .index-name {
   color: white;
+  background-color: var(--yellow);
   visibility: hidden;
   position: absolute;
   margin: 0;
@@ -234,7 +233,7 @@ nav a:hover {
 }
 
 .index-cards:hover {
-  font-size: 26px;
+  font-size: 36px;
 }
 
 
@@ -322,11 +321,13 @@ nav a:hover {
   font-size: 1.5em;
   align-self: center;
   border-radius: 5px;
+  transition: 0.2s ease-in-out;
+  border: 2px solid var(--yellow);
 }
 
 .a-tags a:hover {
   background-color: var(--red);
-  border: 2px solid var(--yellow);
+  /* border: 2px solid var(--yellow); */
 }
 
 
@@ -416,7 +417,6 @@ input {
   font-size: 1.5em;
   box-sizing: border-box;
   border: 2px solid var(--yellow);
-  font-family: 'Architects Daughter', cursive;
 }
 
 input:focus {
@@ -428,7 +428,6 @@ input[type="submit"] {
   width: 100%;
   height: 70px;
   background: var(--yellow);
-  font-family: 'Architects Daughter', cursive;
   font-size: 1.5em;
   color: whitesmoke;
   border-radius: 5px;
@@ -446,7 +445,6 @@ textarea {
   resize: none;
   height: 200px;
   width: 100%;
-  font-family: 'Architects Daughter', cursive;
   box-sizing: border-box;
 }
 
@@ -466,7 +464,6 @@ select {
   width: 100%;
   margin: 0 auto;
   font-size: 1.5em;
-  font-family: 'Architects Daughter', cursive;
 }
 
 .all-info {
@@ -562,7 +559,6 @@ h4 {
   width: 50%;
   background: none;
   color: red;
-  font-family: 'Architects Daughter', cursive;
   font-size: 20px;
   margin: 0;
   align-self: center;
