--- a/views/food/new.ejs
+++ b/views/food/new.ejs
@@ -28,7 +28,7 @@
           <label for="recipe">Recipe</label>
           <input id="recipe" type="text" name="recipe">
           <!-- submit form -->
-          <input type="submit" value="CREATE NEW FOOD">
+          <input type="submit" value="Create New Dish">
         </fieldset>
       </form>
     </div>
