mobile update to navbar

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -22,7 +22,7 @@
           else {%>
             <div class="logo">
               <img src="https://i.imgur.com/BiCGE2h.png" alt="logo">
-              <h1><a href="/foods">Welcome to Caju, <%=currentUser.name%></a></h1>
+              <a href="/foods">Welcome to Caju, <%=currentUser.name%></a>
             </div>
           <%}%>
       <%} else {%>
