--- a/views/food/index.ejs
+++ b/views/food/index.ejs
@@ -8,7 +8,7 @@
   <body>
     <%- include ('../partials/nav.ejs') %>
     <div class="side-tab">
-      <a href="/foods/seed/starterdata/fill/maybe/yes">Click here to add some carefully selected Brazilian dishes!</a>
+      <a href="/foods/seed/starterdata/fill/maybe/yes">Click here to add some pre-selected Brazilian dishes!</a>
     </div>
     <div class="index-container">
       <% for (let i = 0; i < user.addedFoods.length; i++) { %>
