--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -35,7 +35,7 @@
       <%if (currentUser) {%>
         <li>
           <form class='nav-form' action="/sessions?_method=DELETE" method="POST">
-            <input class="login" type="submit" value="Log Out">
+            <input class="login" type="submit" value="Log out">
           </form>
         </li>
         <li class=dropdown><ion-icon id="menu" name="menu-outline"></ion-icon>
