--- a/views/food/new.ejs
+++ b/views/food/new.ejs
@@ -10,7 +10,7 @@
     <h1>Create New Dish</h1>
     <div class="container-v2">
       <form class="new-form" action="/foods" method="POST">
-        <fieldset class="all-info">
+        <fieldset>
           <legend>Details of the Dish</legend>
           <!-- name of dish -->
           <label for="name">Name</label>
