small styling updates

--- a/views/food/about.ejs
+++ b/views/food/about.ejs
@@ -7,7 +7,7 @@
   </head>
   <body class="about">
     <%- include ('../partials/nav.ejs') %>
-    <h1>About Caju</h1>
+    <h1 class='about-header'>About Caju</h1>
     <div class="about-container">
       <div class="about-text">
       <p>
