--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -51,6 +51,7 @@
         else {%>
           <li><a href="/users/new">Sign Up</a></li>
           <li><a href="/sessions/new">Log In</a></li>
+          <li><a href="/foods/about/caju/app">About</a></li>
       <%}%>
     </ul>
     </nav>
