--- a/public/styles.css
+++ b/public/styles.css
@@ -63,7 +63,7 @@ h2 {
 }
 
 .about-images {
-  margin: 0 auto;
+  margin: 50px auto;
   width: 80%;
 }
 
@@ -80,6 +80,10 @@ h2 {
 
 .about-container h1 {
   color: var(--yellow);
+}
+
+.about-header {
+  color: var(--red);
 }
 
 
@@ -388,8 +392,11 @@ nav a:hover {
 
 fieldset {
   border: 1px solid #ccc;
-  padding: 20px;
+  padding: 60px;
   margin: 30px 0;
+  border-radius: 10px;
+  background-color: whitesmoke;
+  text-align: center;
 }
 
 legend {
@@ -403,6 +410,7 @@ label {
   font-size: 1.5em;
   text-align: center;
   margin: 10px 0;
+  color: black;
 }
 
 input {
@@ -420,14 +428,14 @@ input:focus {
 }
 
 input[type="submit"] {
-  width: 100%;
-  height: 70px;
+  width: 60%;
+  height: 60px;
   background: var(--yellow);
   font-size: 1.5em;
   color: whitesmoke;
   border-radius: 5px;
   transition: 0.2s ease-in-out;
-  margin: 50px auto;
+  margin: 40px auto;
 }
 
 input[type="submit"]:hover {
@@ -441,6 +449,7 @@ textarea {
   height: 200px;
   width: 100%;
   box-sizing: border-box;
+  border: 2px solid var(--yellow);
 }
 
 textarea:focus {
@@ -470,6 +479,7 @@ h5 {
 
 h4 {
   text-align: center;
+  color: black;
 }
 
 #create-account {
