--- a/public/styles.css
+++ b/public/styles.css
@@ -428,8 +428,8 @@ input:focus {
 }
 
 input[type="submit"] {
-  width: 60%;
-  height: 60px;
+  width: 100%;
+  height: 70px;
   background: var(--yellow);
   font-size: 1.5em;
   color: whitesmoke;
@@ -479,7 +479,11 @@ h5 {
 
 h4 {
   text-align: center;
+}
+
+.account h4 {
   color: black;
+  margin: 5px;
 }
 
 #create-account {
