--- a/views/food/show.ejs
+++ b/views/food/show.ejs
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <%- include ('../partials/head.ejs') %>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="/../styles.css">
+  </head>
+  </head>
   <body>
     <%- include ('../partials/nav.ejs') %>
     <div class="show-container">
