--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,7 +3,7 @@
       <% if (currentUser) {
           if (currentUser.color === 'red') {%>
             <div class="logo">
-              <img src="https://i.imgur.com/BiCGE2h.png" alt="logo">
+              <img src="https://i.imgur.com/tcrPnap.png" alt="logo">
               <a href="/foods">Welcome to Caju, <%=currentUser.name%></a>
             </div>
           <%}
@@ -15,7 +15,7 @@
           <% }
           else if (currentUser.color === 'orange') { %>
             <div class="logo">
-              <img src="https://i.imgur.com/BiCGE2h.png" alt="logo">
+              <img src="https://i.imgur.com/NegPEc0.png" alt="logo">
               <a href="/foods">Welcome to Caju, <%=currentUser.name%></a>
             </div>
           <% }
