--- a/public/styles.css
+++ b/public/styles.css
@@ -51,8 +51,6 @@ h2 {
   color: white;
   margin: 0 auto;
   width: 800px;
-  /* display: flex;
-  justify-content: center; */
 }
 
 .about-images img {
@@ -107,7 +105,7 @@ nav {
 
 .logo img {
   width: 100px;
-  align-self: flex-start;
+  align-self: center;
 }
 
 nav ul {
@@ -165,7 +163,6 @@ nav a:hover {
 
 .dropdown-content a {
   color: black;
-  /* width: 300px; */
   font-size: 2.2em;
 }
 
@@ -193,8 +190,6 @@ nav a:hover {
 .side-tab a {
   writing-mode: vertical-rl;
   text-orientation: mixed;
-  /* margin-top: 20px; */
-  /* margin-left: 8px; */
   text-decoration: none;
   color: black;
 }
@@ -238,23 +233,15 @@ nav a:hover {
   font-size: 36px;
 }
 
-
-
 .index-img {
   width: 100%;
   height: 200px;
   border-radius: 5px;
-  /* border: 2px solid var(--yellow); */
-  /* box-shadow: 3px 3px var(--yellow); */
-  /* transition: .5s ease-in; */
 }
-
-
 
 /* ================= */
 /* SHOW PAGE - FOODS */
 /* ================= */
-
 
 .show-container h3 {
   margin: 40px auto;
@@ -298,10 +285,8 @@ nav a:hover {
   height: 250px;
   overflow-y: scroll;
   box-sizing: border-box;
-  /* text-align: center; */
   width: 100%;
 }
-
 
 .show-delete {
   width: 140px;
@@ -330,9 +315,7 @@ nav a:hover {
 
 .a-tags a:hover {
   background-color: var(--red);
-  /* border: 2px solid var(--yellow); */
 }
-
 
 
 .double-trouble {
